added data files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ DAT_XLSX_EURUSD_M1_2023.xlsx
 DAT_XLSX_EURUSD_M1_2022.xlsx
 profit_df.xlsx
 EURUSD1.csv
+EURUSD1_2_10_24.csv
+IP Trades.xlsx
+profit_df_new.csv
+profit_df_new.xlsx
+profit_df.csv
