Found the loophole that the optimization function was executing on which was that if you don't take any trades, you don't go into drawdown

--- a/.gitignore
+++ b/.gitignore
@@ -2408,3 +2408,4 @@ EURUSD/2024/01/13/20h_ticks.bi5
 EURUSD/2024/01/13/21h_ticks.bi5
 EURUSD/2024/01/13/22h_ticks.bi5
 EURUSD/2024/01/13/23h_ticks.bi5
+renko_data_cols_added.csv
