added renko dataframe of all the data to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20289,3 +20289,4 @@ EURUSD/2024/02/06/20h_ticks.bi5
 EURUSD/2024/02/06/21h_ticks.bi5
 EURUSD/2024/02/06/22h_ticks.bi5
 EURUSD/2024/02/06/23h_ticks.bi5
+renko_full_data.csv
