added renko files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20290,3 +20290,44 @@ EURUSD/2024/02/06/21h_ticks.bi5
 EURUSD/2024/02/06/22h_ticks.bi5
 EURUSD/2024/02/06/23h_ticks.bi5
 renko_full_data.csv
+renko_train_week0.csv
+renko_train_week1.csv
+renko_train_week2.csv
+renko_train_week3.csv
+renko_train_week4.csv
+renko_train_week5.csv
+renko_train_week6.csv
+renko_train_week7.csv
+renko_train_week8.csv
+renko_train_week9.csv
+renko_train_week10.csv
+renko_train_week11.csv
+renko_train_week12.csv
+renko_train_week13.csv
+renko_train_week14.csv
+renko_train_week15.csv
+renko_train_week16.csv
+renko_train_week17.csv
+renko_train_week18.csv
+renko_train_week19.csv
+renko_train_week20.csv
+renko_train_week21.csv
+renko_train_week22.csv
+renko_train_week23.csv
+renko_train_week24.csv
+renko_train_week25.csv
+renko_train_week26.csv
+renko_train_week27.csv
+renko_train_week28.csv
+renko_train_week29.csv
+renko_train_week30.csv
+renko_train_week31.csv
+renko_train_week32.csv
+renko_train_week33.csv
+renko_train_week34.csv
+renko_train_week35.csv
+renko_train_week36.csv
+renko_train_week37.csv
+renko_train_week38.csv
+renko_train_week39.csv
+renko_train_week40.csv
