adding data to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20331,3 +20331,63 @@ renko_train_week37.csv
 renko_train_week38.csv
 renko_train_week39.csv
 renko_train_week40.csv
+EURUSD_3_6_to_3_8_24.csv
+EURUSD/2024/02/07/00h_ticks.bi5
+EURUSD/2024/02/07/01h_ticks.bi5
+EURUSD/2024/02/07/02h_ticks.bi5
+EURUSD/2024/02/07/03h_ticks.bi5
+EURUSD/2024/02/07/04h_ticks.bi5
+EURUSD/2024/02/07/05h_ticks.bi5
+EURUSD/2024/02/07/06h_ticks.bi5
+EURUSD/2024/02/07/07h_ticks.bi5
+EURUSD/2024/02/07/08h_ticks.bi5
+EURUSD/2024/02/07/09h_ticks.bi5
+EURUSD/2024/02/07/10h_ticks.bi5
+EURUSD/2024/02/07/11h_ticks.bi5
+EURUSD/2024/02/07/12h_ticks.bi5
+EURUSD/2024/02/07/13h_ticks.bi5
+EURUSD/2024/02/07/14h_ticks.bi5
+EURUSD/2024/02/07/15h_ticks.bi5
+EURUSD/2024/02/07/16h_ticks.bi5
+EURUSD/2024/02/07/17h_ticks.bi5
+EURUSD/2024/02/07/18h_ticks.bi5
+EURUSD/2024/02/07/19h_ticks.bi5
+EURUSD/2024/02/07/20h_ticks.bi5
+EURUSD/2024/02/07/21h_ticks.bi5
+EURUSD/2024/02/07/22h_ticks.bi5
+EURUSD/2024/02/07/23h_ticks.bi5
+EURUSD/2024/02/08/00h_ticks.bi5
+EURUSD/2024/02/08/01h_ticks.bi5
+EURUSD/2024/02/08/02h_ticks.bi5
+EURUSD/2024/02/08/03h_ticks.bi5
+EURUSD/2024/02/08/04h_ticks.bi5
+EURUSD/2024/02/08/05h_ticks.bi5
+EURUSD/2024/02/08/06h_ticks.bi5
+EURUSD/2024/02/08/07h_ticks.bi5
+EURUSD/2024/02/08/08h_ticks.bi5
+EURUSD/2024/02/08/09h_ticks.bi5
+EURUSD/2024/02/08/10h_ticks.bi5
+EURUSD/2024/02/08/11h_ticks.bi5
+EURUSD/2024/02/08/12h_ticks.bi5
+EURUSD/2024/02/08/13h_ticks.bi5
+EURUSD/2024/02/08/14h_ticks.bi5
+EURUSD/2024/02/08/15h_ticks.bi5
+EURUSD/2024/02/08/16h_ticks.bi5
+EURUSD/2024/02/08/17h_ticks.bi5
+EURUSD/2024/02/08/18h_ticks.bi5
+EURUSD/2024/02/08/19h_ticks.bi5
+EURUSD/2024/02/08/20h_ticks.bi5
+EURUSD/2024/02/08/21h_ticks.bi5
+EURUSD/2024/02/08/22h_ticks.bi5
+EURUSD/2024/02/08/23h_ticks.bi5
+EURUSD/2024/02/09/00h_ticks.bi5
+EURUSD/2024/02/09/01h_ticks.bi5
+EURUSD/2024/02/09/02h_ticks.bi5
+EURUSD/2024/02/09/03h_ticks.bi5
+EURUSD/2024/02/09/04h_ticks.bi5
+EURUSD/2024/02/09/05h_ticks.bi5
+EURUSD/2024/02/09/06h_ticks.bi5
+EURUSD/2024/02/09/07h_ticks.bi5
+EURUSD/2024/02/09/08h_ticks.bi5
+EURUSD/2024/02/09/09h_ticks.bi5
+old files/IP expert print messages - Sheet2.csv
