new renko csv to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20392,3 +20392,4 @@ EURUSD/2024/02/09/08h_ticks.bi5
 EURUSD/2024/02/09/09h_ticks.bi5
 old files/IP expert print messages - Sheet2.csv
 renko_full_data_2.csv
+renko_full_data_1.csv
