data to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20395,3 +20395,6 @@ old files/IP expert print messages - Sheet2.csv
 renko_full_data_2.csv
 renko_full_data_1.csv
 EURUSD_3_8_to_3_12_24.csv
+MSolution orders.csv
+nova orders.csv
+order open bars.csv
