added verification csvs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20398,3 +20398,6 @@ EURUSD_3_8_to_3_12_24.csv
 MSolution orders.csv
 nova orders.csv
 order open bars.csv
+nova orders.xlsx
+profit_df_new_index_select_day_3_11_24_3_12_24.csv
+profit_df_new_index_select_day.csv
