adding renko csv's to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20401,3 +20401,74 @@ order open bars.csv
 nova orders.xlsx
 profit_df_new_index_select_day_3_11_24_3_12_24.csv
 profit_df_new_index_select_day.csv
+brick_size_variations/renko_full_data_29.csv
+brick_size_variations/renko_full_data_31.csv
+brick_size_variations/renko_full_data_32.csv
+brick_size_variations/renko_full_data_33.csv
+brick_size_variations/renko_full_data_34.csv
+brick_size_variations/renko_full_data_35.csv
+brick_size_variations/renko_full_data_36.csv
+brick_size_variations/renko_full_data_37.csv
+brick_size_variations/renko_full_data_38.csv
+brick_size_variations/renko_full_data_39.csv
+brick_size_variations/renko_full_data_40.csv
+brick_size_variations/renko_full_data_41.csv
+brick_size_variations/renko_full_data_42.csv
+brick_size_variations/renko_full_data_43.csv
+brick_size_variations/renko_full_data_44.csv
+brick_size_variations/renko_full_data_45.csv
+brick_size_variations/renko_full_data_46.csv
+brick_size_variations/renko_full_data_47.csv
+brick_size_variations/renko_full_data_48.csv
+brick_size_variations/renko_full_data_49.csv
+brick_size_variations/renko_full_data_50.csv
+brick_size_variations/renko_full_data_51.csv
+brick_size_variations/renko_full_data_52.csv
+brick_size_variations/renko_full_data_53.csv
+brick_size_variations/renko_full_data_54.csv
+brick_size_variations/renko_full_data_55.csv
+brick_size_variations/renko_full_data_56.csv
+brick_size_variations/renko_full_data_57.csv
+brick_size_variations/renko_full_data_58.csv
+brick_size_variations/renko_full_data_59.csv
+brick_size_variations/renko_full_data_60.csv
+brick_size_variations/renko_full_data_61.csv
+brick_size_variations/renko_full_data_62.csv
+brick_size_variations/renko_full_data_63.csv
+brick_size_variations/renko_full_data_64.csv
+brick_size_variations/renko_full_data_65.csv
+brick_size_variations/renko_full_data_66.csv
+brick_size_variations/renko_full_data_67.csv
+brick_size_variations/renko_full_data_68.csv
+brick_size_variations/renko_full_data_69.csv
+brick_size_variations/renko_full_data_70.csv
+brick_size_variations/renko_full_data_71.csv
+brick_size_variations/renko_full_data_72.csv
+brick_size_variations/renko_full_data_73.csv
+brick_size_variations/renko_full_data_74.csv
+brick_size_variations/renko_full_data_75.csv
+brick_size_variations/renko_full_data_76.csv
+brick_size_variations/renko_full_data_77.csv
+brick_size_variations/renko_full_data_78.csv
+brick_size_variations/renko_full_data_79.csv
+brick_size_variations/renko_full_data_80.csv
+brick_size_variations/renko_full_data_81.csv
+brick_size_variations/renko_full_data_82.csv
+brick_size_variations/renko_full_data_83.csv
+brick_size_variations/renko_full_data_84.csv
+brick_size_variations/renko_full_data_85.csv
+brick_size_variations/renko_full_data_86.csv
+brick_size_variations/renko_full_data_87.csv
+brick_size_variations/renko_full_data_88.csv
+brick_size_variations/renko_full_data_89.csv
+brick_size_variations/renko_full_data_90.csv
+brick_size_variations/renko_full_data_91.csv
+brick_size_variations/renko_full_data_92.csv
+brick_size_variations/renko_full_data_93.csv
+brick_size_variations/renko_full_data_94.csv
+brick_size_variations/renko_full_data_95.csv
+brick_size_variations/renko_full_data_96.csv
+brick_size_variations/renko_full_data_97.csv
+brick_size_variations/renko_full_data_98.csv
+brick_size_variations/renko_full_data_99.csv
+brick_size_variations/renko_full_data_100.csv
