added best_parameters csv to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20472,3 +20472,4 @@ brick_size_variations/renko_full_data_97.csv
 brick_size_variations/renko_full_data_98.csv
 brick_size_variations/renko_full_data_99.csv
 brick_size_variations/renko_full_data_100.csv
+basic_parameters.csv
