added csvs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20473,3 +20473,5 @@ brick_size_variations/renko_full_data_98.csv
 brick_size_variations/renko_full_data_99.csv
 brick_size_variations/renko_full_data_100.csv
 basic_parameters.csv
+EURUSD_3_12_to_3_22_24.csv
+renko_full_data_81.csv
