--- a/.gitignore
+++ b/.gitignore
@@ -20475,3 +20475,4 @@ brick_size_variations/renko_full_data_100.csv
 basic_parameters.csv
 EURUSD_3_12_to_3_22_24.csv
 renko_full_data_81.csv
+basic_parameters.xlsx
