csv's to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20476,3 +20476,7 @@ basic_parameters.csv
 EURUSD_3_12_to_3_22_24.csv
 renko_full_data_81.csv
 basic_parameters.xlsx
+best_parameters_dsma.xlsx
+eval_df.csv
+logbook_df.csv
+best_parameters_dsma.xlsx
