csvs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20482,3 +20482,9 @@ logbook_df.csv
 best_parameters_dsma.xlsx
 calendar_df_full.csv
 EURUSD_3_23_to_3_30_24.csv
+EURUSD_11_15_17_to_11_15_18.csv
+EURUSD_11_15_18_to_11_15_19.csv
+EURUSD_11_15_19_to_11_15_20.csv
+EURUSD_11_15_20_to_11_15_21.csv
+EURUSD_11_15_21_to_11_15_22.csv
+EURUSD_full_tickstory_data.csv
