data to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20488,3 +20488,5 @@ EURUSD_11_15_19_to_11_15_20.csv
 EURUSD_11_15_20_to_11_15_21.csv
 EURUSD_11_15_21_to_11_15_22.csv
 EURUSD_full_tickstory_data.csv
+merged_w_mt4.csv
+orders in MT4.csv
