--- a/.gitignore
+++ b/.gitignore
@@ -20490,3 +20490,6 @@ EURUSD_11_15_21_to_11_15_22.csv
 EURUSD_full_tickstory_data.csv
 merged_w_mt4.csv
 orders in MT4.csv
+symbols_forex_1hr_2008-05-19_2024-05-08
+symbols_forex_5min_2023-01-09_2024-05-08
+symbols_forex_15min_2020-05-11_2024-05-08
