added msolutions configuration

--- a/Instrument.conf
+++ b/Instrument.conf
@@ -100,3 +100,9 @@ Master Card: MA.NYSE
 Oracle: ORCL.NYSE
 Visa Card: V.NYSE
 Uber: UBER.NYSE
+[MSolutions]
+EURUSD: EURUSD.i
+AUDCHF: AUDCHF.i
+NZDCHF: NZDCHF.i
+GBPNZD: GBPNZD.i
+USDCAD: USDCAD.i
