--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ models_2024-05-10/
 models_2024-05-17/
 models_2024-05-24/
 models_2024-05-31/
+models_2024-06-07/
 EURUSD/
 EURUSD/2023/00/01/00h_ticks.bi5
 EURUSD/2023/00/01/01h_ticks.bi5
@@ -20501,3 +20502,4 @@ models_2024-05-10/model_21_2024-05-10.pkl
 models_2024-05-17/model_0_2024-05-17.pkl
 models_2024-05-24/model_15_2024-05-24.pkl
 models_2024-05-31/model_1_2024-05-31.pkl
+models_2024-06-07/model_1_2024-06-07.pkl
