--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ models_2024-05-17/
 models_2024-05-24/
 models_2024-05-31/
 models_2024-06-07/
+models_2024-06-14/
+models_2024-06-21/
 EURUSD/
 EURUSD/2023/00/01/00h_ticks.bi5
 EURUSD/2023/00/01/01h_ticks.bi5
@@ -20503,3 +20505,4 @@ models_2024-05-17/model_0_2024-05-17.pkl
 models_2024-05-24/model_15_2024-05-24.pkl
 models_2024-05-31/model_1_2024-05-31.pkl
 models_2024-06-07/model_1_2024-06-07.pkl
+models_2024-06-14/model_1_2024-06-14.pkl
