files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20506,3 +20506,5 @@ models_2024-05-24/model_15_2024-05-24.pkl
 models_2024-05-31/model_1_2024-05-31.pkl
 models_2024-06-07/model_1_2024-06-07.pkl
 models_2024-06-14/model_1_2024-06-14.pkl
+renko_full_data_50_latest.csv
+EURUSD_3_31_to_6_21_24.csv
