improving data quality

--- a/.gitignore
+++ b/.gitignore
@@ -20508,3 +20508,9 @@ models_2024-06-07/model_1_2024-06-07.pkl
 models_2024-06-14/model_1_2024-06-14.pkl
 renko_full_data_50_latest.csv
 EURUSD_3_31_to_6_21_24.csv
+EURUSD_03_21_to_03_23_24.csv
+EURUSD_6_21_to_8_11_24_hourly_.csv
+EURUSD_6_21_to_8_11_24.csv
+EURUSD_08_01_to_11_15_16.csv
+EURUSD_11_15_16_to_11_15_17.csv
+EURUSD_full_tickstory_data_hourly.csv
