model tests added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20519,3 +20519,7 @@ input/m5-forecasting-accuracy/sales_train_evaluation.csv
 input/m5-forecasting-accuracy/sales_train_validation.csv
 input/m5-forecasting-accuracy/sample_submission.csv
 input/m5-forecasting-accuracy/sell_prices.csv
+best_models/lgb/models.pkl
+best_models/lgb/ts.pkl
+lgb/models.pkl
+lgb/ts.pkl
