--- a/.gitignore
+++ b/.gitignore
@@ -20528,3 +20528,6 @@ crossvalidation_df_RWD.csv
 EURUSD_full_tickstory_data_15_min_ready.csv
 EURUSD_full_tickstory_data_15_min.csv
 EURUSD_full_tickstory_data_hourly_w_15min_pred.csv
+crossvalidation_df_LR.csv
+best_models2/*
+catboost_info/*
