--- a/.gitignore
+++ b/.gitignore
@@ -20537,3 +20537,4 @@ EURUSD_full_tickstory_data_5_min.csv
 df_w_news_15min_pred.csv
 df_w_news_5min_pred.csv
 to_do.notesnlh
+Indicator_backtesting/Indicator_search/indicatorSearch
